# pup-sdk

./: .env.example  .gitignore  Dockerfile  HUGGINGFACE_DEPLOYMENT.md  LICENSE  README.md  app.py  build.gradle.kts  connect_alberto.py  gradlew  gradlew.bat  package-lock.json  package.json  pyproject.toml  requirements.txt  settings.gradle.kts  simple_test.py  tailwind.config.js  test_client.py  test_server.py  test_web.py  test_web_startup.py  vite.config.js  worker.js  wrangler.toml
.github/workflows/: deploy-huggingface.yml  deploy.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/albertoroca/pupsdk/app/: MainActivity.kt
app/src/main/java/com/albertoroca/pupsdk/app/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: colors.xml  themes.xml
examples/: basic_usage.py  discord_bot.py  mobile_app.html
gradle/: libs.versions.toml
pup_sdk/: __init__.py  cli.py  client.py  exceptions.py  types.py
pup_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pup_sdk/web/: __init__.py  app.py
pup_sdk/web/static/: style.css
pup_sdk/web/templates/: index.html
sdk/: build.gradle.kts  consumer-rules.pro
sdk/src/main/: AndroidManifest.xml
sdk/src/main/java/com/albertoroca/pupsdk/: PupClient.kt  PupClientConfig.kt
sdk/src/main/java/com/albertoroca/pupsdk/model/: Models.kt
sdk/src/main/java/com/albertoroca/pupsdk/network/: ManualDns.kt
sdk/src/main/res/values/: strings.xml
src/: worker.mjs  worker.ts
